# LeetVibe

./: .env.exemple  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
.vibe/: config.toml
dev/: preview_agent_session.py  preview_challenge_detail.py  preview_challenge_list.py  preview_feedback.py  preview_home.py  preview_login.py  preview_stats.py
docs/: index.html
leetvibe/: challenge_loader.py  code_runner.py  config.py  session_log.py  vibe_agent.py
leetvibe/cloud/: auth.py
leetvibe/textual_ui/: __init__.py  app.py
problems/easy/: absolute-difference-between-maximum-and-minimum-k-elements.json  account-balance-after-rounded-purchase.json  add-digits.json  add-two-integers.json  adjacent-increasing-subarrays-detection-i.json  alternating-groups-i.json  ant-on-the-boundary.json  apple-redistribution-into-boxes.json  apply-operations-to-an-array.json  assign-cookies.json  available-captures-for-rook.json  average-of-levels-in-binary-tree.json  average-value-of-even-numbers-that-are-divisible-by-three.json  backspace-string-compare.json  balanced-binary-tree.json  base-7.json  baseball-game.json  binary-search.json  binary-tree-inorder-traversal.json  binary-tree-paths.json  binary-tree-tilt.json  binary-watch.json  bitwise-or-of-even-numbers-in-an-array.json  buddy-strings.json  build-array-from-permutation.json  calculate-delayed-arrival-time.json  calculate-money-in-leetcode-bank.json  can-make-arithmetic-progression-from-sequence.json  can-place-flowers.json  capitalize-the-title.json  categorize-box-according-to-criteria.json  check-balanced-string.json  check-distances-between-same-letters.json  check-divisibility-by-digit-sum-and-product.json  check-if-all-1s-are-at-least-length-k-places-away.json  check-if-all-characters-have-equal-number-of-occurrences.json  check-if-all-the-integers-in-a-range-are-covered.json  check-if-any-element-has-prime-frequency.json  check-if-array-is-good.json  check-if-array-is-sorted-and-rotated.json  (+334 more)
problems/hard/: abbreviating-the-product-of-a-range.json  apply-operations-to-maximize-score.json  basic-calculator-iv.json  best-time-to-buy-and-sell-stock-iii.json  binary-tree-cameras.json  block-placement-queries.json  brace-expansion-ii.json  bricks-falling-when-hit.json  build-a-matrix-with-conditions.json  build-array-where-you-can-find-the-maximum-exactly-k-comparisons.json  burst-balloons.json  candy.json  car-fleet-ii.json  chalkboard-xor-game.json  check-if-an-original-string-exists-given-two-encoded-strings.json  check-if-dfs-strings-are-palindromes.json  check-if-point-is-reachable.json  checking-existence-of-edge-length-limited-paths.json  cherry-pickup-ii.json  cherry-pickup.json  closest-subsequence-sum.json  collect-coins-in-a-tree.json  construct-string-with-minimum-cost.json  construct-target-array-with-multiple-sums.json  count-all-possible-routes.json  count-all-valid-pickup-and-delivery-options.json  count-almost-equal-pairs-ii.json  count-anagrams.json  count-connected-components-in-lcm-graph.json  (+319 more)
skills/: __init__.py
src/: __init__.py  challenge_loader.py  cli.py  config.py  session_log.py  vibe_agent.py
tests/: conftest.py  test.py  test_complexity_analyzer.py  test_config.py  test_progress_tracker.py  test_screens.py  test_teaching_mode.py  test_test_runner.py  test_truncated_filter.py  test_vibe_agent.py  test_voice_narrator.py
web/: index.html
(+2164 files in other folders)
