[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leetvibe"
version = "0.1.0"
description = "AI Pair Programming CLI for LeetCode — Mistral Hackathon 2026"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Hiba Chaabnia", email = "hiba.chaabnia.pro@gmail.com" },
]
keywords = ["Data Structures and Algorithms (DSA)", "LeetCode", "AI", "CLI", "Mistral", "Mistral Vibe", "Pair Programming", "Competitive Programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers , Students",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "supabase>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hibachaabnia/leetvibe"
Repository = "https://github.com/hibachaabnia/leetvibe"
"Bug Tracker" = "https://github.com/hibachaabnia/leetvibe/issues"

[project.scripts]
leetvibe = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
